# gazebo

my_robot/: CMakeLists.txt
my_robot/model/robot/: model.sdf
my_robot/world/: my_world
